Tweak forge version number parsing, closes #7